# gtk-sample-app-c

./: .gitignore  CMakeLists.txt  LICENSE  MinGW.cmake  README.md  Windows.md  config.h.in  meson.build  sampleapp.desktop
po/: sampleapp.pot
po/fr/: sampleapp.mo  sampleapp.po
resources/NSIS/: NSIS.definitions.nsh.in
sampleapp/ui/: sampleapp.ui
share/glib-2.0/schemas/: sampleapp.gschema.xml
src/: app.c  app.h  callbacks.c  main.c
utils/: meson_build.sh  rename_app.sh
